# Aventura

./: .gitignore  components.json  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/sync/: server.rs
src/lib/components/discovery/: DiscoveryModal.svelte
src/lib/components/intro/: WelcomeScreen.svelte
src/lib/components/layout/: AppShell.svelte  Header.svelte  Sidebar.svelte
src/lib/components/lorebook/: LorebookList.svelte  LorebookView.svelte
src/lib/components/memory/: ChapterCard.svelte  ManualChapterModal.svelte  MemoryHeader.svelte  MemoryView.svelte  ResummarizeModal.svelte
src/lib/components/settings/: AdvancedSettings.svelte  AgentProfiles.svelte  FontSelector.svelte  ImageModelSelect.svelte  MainNarrative.svelte  ModelSelector.svelte  SettingsModal.svelte  TTSSettings.svelte
src/lib/components/story/: ActionInput.svelte  GalleryTab.svelte  LibraryView.svelte  ReasoningBlock.svelte  StoryEntry.svelte  StoryView.svelte  StreamingEntry.svelte  Suggestions.svelte
src/lib/components/sync/: SyncModal.svelte
src/lib/components/ui/: icon-row.svelte
src/lib/services/: characterCardImporter.ts  database.ts  events.ts  export.ts  lorebookImporter.ts  templates.ts  tokenizer.ts  updater.ts
src/lib/services/ai/: classifier.ts  (+14 more)
src/lib/stores/: settings.svelte.ts  story.svelte.ts  ui.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: fontDetection.ts  htmlSanitize.ts
src/routes/: +page.svelte
(+73 files in other folders)
